src/objects/Teller_Function_Field__c.object
<CustomObject>
    <fields>
        <fullName>CCY_Picklist_Omit_Account_CCY__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CCY Picklist Omit Account CCY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCY_Picklist_Values__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CCY Picklist Values</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Label__c</fullName>
        <label>Field Label</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Picklist_Default__c</fullName>
        <label>Field Picklist Default</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Picklist_Values__c</fullName>
        <label>Field Picklist Values</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Input_Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Input Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mapping_Field_Name__c</fullName>
        <label>Mapping Field Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teller_Function_Root__c</fullName>
        <label>Teller_Function_Root</label>
        <referenceTo>Teller_Function_Root__c</referenceTo>
        <relationshipLabel>Teller Function Fields</relationshipLabel>
        <relationshipName>Teller_Function_Fields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Teller_Function_Stage__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Teller Function Stage</label>
        <referenceTo>Teller_Function_Stage__c</referenceTo>
        <relationshipLabel>Teller Function Fields</relationshipLabel>
        <relationshipName>Teller_Function_Fields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Visible</label>
        <type>Checkbox</type>
    </fields>
    <label>Teller Function Field</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Teller_Function_Root__c</columns>
        <columns>Teller_Function_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Teller Function Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teller Function Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>